--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-focus-lock": "^2.9.4",
     "react-icons": "^4.9.0",
+    "react-remove-scroll": "^2.5.6",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "unsplash-js": "^7.0.18",
